[project]
name = "langchain-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=1.2.11",
    "langchain-anthropic>=1.3.4",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.0",
    "mcp[cli]>=1.26.0",
    "pypdf>=6.8.0",
    "python-dotenv>=1.2.2",
    "unstructured[md]>=0.21.5",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.5",
    "mypy>=1.19.1",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
